Fixing template merge issue. Adding grid column fixing sample.

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -52,6 +52,11 @@
                     <igx-icon fontSet="material" name="view_column"></igx-icon>
                     <span>Grid Performance</span>
                 </span>
+                
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/gridColumnFixing">
+                    <igx-icon fontSet="material" name="view_column"></igx-icon>
+                    <span>Grid Column Fixing</span>
+                </span>
 
                 <span class="nav-item" [routerLinkActive]="'active'" routerLink="/dialog">
                     <igx-icon fontSet="material" name="all_out"></igx-icon>
