--- a/demos/app/list-performance/sample.component.css
+++ b/demos/app/list-performance/sample.component.css
@@ -2,22 +2,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 34px;
 }
 
 .item > [igxLabel],
 .item > .person {
     position: absolute;
     margin-left: 72px;
-}
-
-.person .name {
-    padding: 0;
-    margin: 0;
-}
-
-.person .phone {
-    font-size: 12px;
-    color: gray;
 }
 
 .item igx-icon {
