--- a/src/themes/components/card/_card-theme.scss
+++ b/src/themes/components/card/_card-theme.scss
@@ -30,7 +30,7 @@ $components: register-component($components, #{$component-name});
 
     // 4. Cards //
     // Genaral
-    $card-border-radius: 2px !default; // Colors
+    $card-border-radius: 2px !default;
     $card-shadow: $elevate-2 !default;
     $card-shadow-hover: $elevate-8 !default;
     // Font Sizes
@@ -48,7 +48,7 @@ $components: register-component($components, #{$component-name});
     $card-content-margin: 0 !default;
     $card-actions-padding: em(8px, 16px) !default;
     $card-subtitle-margin: 0 !default;
-    $card-tgroup-margin: 0 em(16px); // Transitions
+    $card-tgroup-margin: 0 em(16px);
     $card-transitions: box-shadow .3s cubic-bezier(.25, .8, .25, 1) !default;
 
     %igx-card-display {
@@ -60,6 +60,7 @@ $components: register-component($components, #{$component-name});
         background: map-get($this, background);
         transition: $card-transitions;
         backface-visibility: hidden;
+
         &:hover {
             box-shadow: $card-shadow-hover;
         }
@@ -157,7 +158,6 @@ $components: register-component($components, #{$component-name});
     %igx-card-actions-igroup--end {
         margin-left: auto;
     }
-
 }
 
 
